<resources>
    <string name="app_name">Taqseet</string>
    <string name="hintCustName">Enter customer name</string>
    <string name="hintPhone">Enter customer phone</string>
    <string name="hintFirstPay">first pay</string>
    <string name="hintPayment">payment</string>
    <string name="pay_now">Pay Now</string>
    <string name="all_payment">All Payment</string>
    <string name="menu_item_delete_customer">Delete customer</string>
    <string name="add_new_customer">Add New Customer</string>
    <string name="view_all_customer">View All Customer</string>
    <string name="hint_item_name">Item Name</string>
    <string name="hint_total_price">Total Price</string>
    <string name="btn_add_customer">Add Customer</string>
    <string name="itemName">Item Name</string>
    <string name="totalCost">Total Cost</string>
    <string name="totalPaid">Total Paid</string>
</resources>
