<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="shenouda_fawzy.taqseet.AddCutomerActivity">

    <EditText
        android:id="@+id/userFullName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:hint="@string/hintCustName"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/userPhoneNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/userFullName"
        android:ems="10"
        android:hint="@string/hintPhone"
        android:inputType="phone" />

    <EditText
        android:id="@+id/totaCost"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/userPhoneNumber"
        android:hint="Total Price"
        android:inputType="numberDecimal" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/totaCost"
        android:hint="@string/hintFirstPay"
        android:inputType="numberDecimal"
        android:id="@+id/firstPay"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/firstPay"
        android:text="Add Customer"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:onClick="addNewCutomer"/>

</RelativeLayout>
